Work_Log/2017_11_25.txt
* Chihyun Ahn
caffe/src/caffe/layers/pooling_layer.cpp
caffe/src/caffe/test/test_pooling_layer.cpp
[Role of functions]
cpu_data() => if there is a data modified in gpu state, return the data's address to cpu.
mutable_cpu_data() => if there are mutable data modified in gpu state, return the data's address to cpu. 
caffe_set(const int N, const Dtype alpha, Dtype* Y) => if alpha is 0, size of Y is initialized by size N and all the contents of Y are intialized to 0. if not, all the contents of Y are initialized by alpha with size N.

* Jihoon Han
[WIP]
- Searching how to solve following problem.
CXX src/caffe/layers/pooling_layer.cpp
src/caffe/layers/pooling_layer.cpp: In instantiation of ‘void caffe::PoolingLayer<Dtype>::LayerSetUp(const std::vector<caffe::Blob<Dtype>*>&, const std::vector<caffe::Blob<Dtype>*>&) [with Dtype = float]’:
src/caffe/layers/pooling_layer.cpp:512:1:   required from here
src/caffe/layers/pooling_layer.cpp:92:15: error: ‘class caffe::LayerParameter’ has no member named ‘pool_param’
   num_output_ = this->layer_param_.pool_param().num_output();
               ^
src/caffe/layers/pooling_layer.cpp:94:10: error: ‘class caffe::LayerParameter’ has no member named ‘pool_param’
   group_ = this->layer_param_.pool_param().group();
          ^
src/caffe/layers/pooling_layer.cpp: In instantiation of ‘void caffe::PoolingLayer<Dtype>::LayerSetUp(const std::vector<caffe::Blob<Dtype>*>&, const std::vector<caffe::Blob<Dtype>*>&) [with Dtype = double]’:
src/caffe/layers/pooling_layer.cpp:512:1:   required from here
src/caffe/layers/pooling_layer.cpp:92:15: error: ‘class caffe::LayerParameter’ has no member named ‘pool_param’
   num_output_ = this->layer_param_.pool_param().num_output();
               ^
src/caffe/layers/pooling_layer.cpp:94:10: error: ‘class caffe::LayerParameter’ has no member named ‘pool_param’
   group_ = this->layer_param_.pool_param().group();
          ^
Makefile:581: recipe for target '.build_release/src/caffe/layers/pooling_layer.o' failed
make: *** [.build_release/src/caffe/layers/pooling_layer.o] Error 1

[Done]
- Added following function 
    [pooling_layer.hpp] pool_im2col_cpu, pool_im2col_gpu, pool_col2im_cpu, pool_col2im_gpu,
    [pooling_layer.cpp] foward_cpu_gemm, foward_cpu_bias, backward_cpu_gemm, backward_cpu_bias, weight_cpu_gemm
                        foward_gpu_gemm, foward_gpu_bias, backward_gpu_gemm, backward_gpu_bias, weight_gpu_gemm
- Building pooling layer DONE
- Added Basic Vectorized pooling Operation.
  Mode Set : VEC
